2003-06-29  Mikael Hallendal  <micke@imendio.com>

        * NEWS: Updated, missed this in the 0.7 tarball.

        * Release 0.7

	* configure.in: Bumped to 0.7
	
	* devhelp.spec.in: Updated for 0.7 and new web site.

2003-06-29  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (dh_window_new): Don't make the size relative to
	the resolution, that didn't work out very well.

2003-06-28  Mikael Hallendal  <micke@imendio.com>

	* src/dh-window.c: 
	* (window_activate_action): Added link to project page in about dialog.

2003-06-28  Richard Hult  <richard@imendio.com>

	* src/dh-base.c (base_init_books): Use g_get_home_dir and
	g_build_filename.
	(base_sort_books, book_sort_func): Sort the toplevel list of
	books. Fixes bug #111535.

	* src/*.c: Clean up includes.

	* src/dh-main.c: Revert accidental commit. 

	* src/dh-window.c (dh_window_new): s/gtk_type_new/g_object_new/.

	* src/dh-html-gtkhtml2.c (dh_html_new): s/DevHelp/Devhelp/. Also
	remove the part about shift-arrows, since that doesn't work and
	kind of crack. Also specify the encoding to be UTF-8. 

2003-06-27  Richard Hult  <richard@imendio.com>

	* src/dh-search.c (search_entry_key_press_event_cb): Apply a
	variation of a patch from Mike Hearn to go to the first hit when
	enter is pressed. Fixes bug #114558.
	(search_tree_button_press_cb, dh_search_new): Handle clicks in the
	tree, fixes bug #114567. Patch from Mike Hearn
	<mike@theoretic.com>.

	* src/dh-window.c (window_populate, window_switch_page_after_cb)
	(window_switch_page_cb): Hack to workaround weird selection
	problem with the book tree.

	* devhelp.keys.in: 
	* devhelp.desktop.in: Fix name.

	* src/dh-parser.c (parser_start_node_cb): Fix bug #113065, make
	messages more generic to help translators.

	* libegg/menu/egg-action.c: Patch to get translated menus.

	* libegg/menu/egg-menu-merge.c: Disable some debug output.

	* src/dh-window.c (window_activate_action): Apply a variant of the