@@ -1,3 +1,8 @@
+2003-06-29  Richard Hult  <richard@imendio.com>
+
+	* misc/devhelp.el: 
+	* misc/devhelp.vim: Add comment about -g. 
+
 2003-06-29  Mikael Hallendal  <micke@imendio.com>
 
         * NEWS: Updated, missed this in the 0.7 tarball.
